Closed Bug 104866 Opened 23 years ago Closed 23 years ago

Non-plugin np*.dll in the plugins folder crashes the browser

Categories

(Core Graveyard :: Plug-ins, defect)

x86
Windows 2000
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: alvin, Assigned: serhunt)

References

()

Details

Attachments

(2 files)

started between 11 oct and 12 oct builds.

when entering sites created with Microsoft's newer backend stuff, and with
Microsoft's 'npptools.dll' installed, browser crashes.


Reproducible: Always
Steps to Reproduce:
1. have a program install 'npptools.dll' in plugin dir or install it yourself.
2. go to www.espn.com
3! broswer crashes
Attached file npptools.dll
-> Plugins
Assignee: asa → av
Component: Browser-General → Plug-ins
QA Contact: doronr → shrir
It eventually crashes on nsCRT::strlen(aANSIString); when the argument is null. 
This thing itself may be a bug -- nsCRT should probably not crash in situations 
like this.

Our problem is different. The attached file -- npptools.dll -- is _not_ a 
plugin. Its version stamp lacks everything we need to consider the dll a plugin, 
it does not even specify the mime type is supposed to handle. So the temptation 
is to declare the bug invalid but on the second thought I think we still have a 
valid bug here. Mozilla currently includes every dll it founds in the plugins 
folder which name starts with np* into its plugin list. This is wrong. We should 
at least check for the presense of mime type. Changing summary.

The crash should be fixed anyway. Filtering dll's is the next step. We should 
probably file a bug on this.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: 'npptools' plugin causes crash → Non-plugin np*.dll in the plugins folder crashes the browser
nhotta, would you please review? This patch changes the code you recently wrote.
Status: NEW → ASSIGNED
Comment on attachment 53652 [details] [diff] [review]
patch to fix the crash -- first try

r=nhotta
Attachment #53652 - Flags: review+
Comment on attachment 53652 [details] [diff] [review]
patch to fix the crash -- first try

sr=waterson
Attachment #53652 - Flags: superreview+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verif fixed on win98 ...trunk 1107 build.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: