Fixing bug 104866 -- null chech before using nsCRT::strlen avoiding crash, r=nhotta, sr=waterson